--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -13,6 +13,12 @@
     <% @garden.plants.each do |plant| %>
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= plant.image_url %>)">
         <%= plant.name %>
+        <div class="card-tags">
+          <% plant.tags.each do |tag| %>
+            <span><%= tag.name %></span>
+          <% end %>
+          <%= link_to "+", new_plant_plant_tag_path(plant) %>
+        </div>
         <div class="delete-plant">
           <%= link_to '+', plant_path(plant), method: :delete, data: {confirm: "Are you sure ?"} %>
         </div>
